--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.cjs"
+    "start": "node server.cjs",
+    "start:dev": "nodemon server.cjs"
   },
   "author": "",
   "license": "ISC",
