--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "facerecognitionbackend",
   "version": "1.0.0",
   "description": "backend for facerecognition app",
@@ -16,10 +17,11 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "knex": "^2.5.1",
-    "pg": "^8.11.3",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
+
 }
